--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     </head>
     <body>
         <div id="wrapper">
+            <div id="grid-wrapper">
+                <div id="grid"></div>
+            </div>
             <div id="legend">
                 <img src="tiles.png" id="tiles" crossorigin="anonymous">
             </div>
-            <div id="grid">
-
-            </div>
         </div>
+        <script src="dimensions.js"></script>
         <script src="tileset.js"></script>
         <script src="grid.js"></script>
         <script src="script.js"></script>
