Created a text generator with the vocabulary of an eBay salesman

--- a/sentences/index.html
+++ b/sentences/index.html
@@ -7,7 +7,14 @@
     </head>
     <body>
         <div id="wrapper">
+            <div id="result">
+                <textarea id="text"></textarea>
+            </div>
+            <div id="controls">
+                <button id="button-generate">Generate</button>
+            </div>
         </div>
+        <script src="text.js"></script>
         <script src="script.js"></script>
     </body>
 </html>
