--- a/sentences/index.html
+++ b/sentences/index.html
@@ -8,7 +8,7 @@
     <body>
         <div id="wrapper">
             <div id="result">
-                <textarea id="text"></textarea>
+                <textarea id="text" readonly></textarea>
             </div>
             <div id="controls">
                 <button id="button-generate">Generate</button>
