--- a/single.html
+++ b/single.html
@@ -12,16 +12,17 @@
             <div id="result">
                 <textarea id="text" readonly></textarea>
             </div>
+            <div id="controls">
+                <button id="button-generate">Generate</button>
+            </div>
             <div id="sources">
                 <select id="source-picker">
                     <option value="obama.txt">Obama's speech on the state of democracy</option>
                     <option value="me.txt">My blog post on convolutional textures</option>
                 </select>
             </div>
-            <div id="controls">
-                <button id="button-generate">Generate</button>
-            </div>
         </div>
+        <script src="loadText.js"></script>
         <script src="graph.js"></script>
         <script src="text.js"></script>
         <script src="scriptSingle.js"></script>
