--- a/single.html
+++ b/single.html
@@ -14,6 +14,7 @@
             </div>
             <div id="controls">
                 <button id="button-generate">Generate</button>
+                <input type="file" accept="text/plaint" onchange="openFile(event)">
             </div>
             <div id="sources">
                 <select id="source-picker">
